--- a/app/stylesheets/base/_base.scss
+++ b/app/stylesheets/base/_base.scss
@@ -9,8 +9,7 @@ $light-grey: #979797;
 $accent: HSL(19, 100%, 50%);
 $accent-2: HSL(19, 100%, 39%);
 $accent-3: HSL(17, 100%, 28%);
-
-$accent-4: #00B6FF;
+$accent-4: HSL(17, 100%, 23%);
 
 // Typography
 $font-family: 'Lato', sans-serif;
