--- a/app/stylesheets/components/_coffee.scss
+++ b/app/stylesheets/components/_coffee.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   overflow: auto;
   background-color: $background;
+  color: $text-color;
 
   .header {
     padding: 1.5em 1.5em;
