--- a/app/stylesheets/components/_weather.scss
+++ b/app/stylesheets/components/_weather.scss
@@ -4,6 +4,7 @@
   width: 50%;
   text-align: center;
   letter-spacing: 0.05em;
+  background-color: $background;
   color: $text-color;
 
   & > section {
@@ -187,7 +188,6 @@
         }
 
         .rain {
-          background-color: $accent-4;
           margin-top: 0em;
           float: left;
         }
