--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,5 +1,19 @@
 @import 'base/base';
+
+body {
+  margin: 0;
+  background-color: $background;
+  color: $text-color;
+  font-family: $font-family;
+  font-size: 20px;
+}
+
+.split-view {
+  display: flex;
+}
+
+
 @import 'components/base';
 @import 'components/weather';
 @import 'components/coffee';
-@import 'components/brew'
+@import 'components/brew';
