Added default data for page load

--- a/app/stylesheets/components/_weather.scss
+++ b/app/stylesheets/components/_weather.scss
@@ -66,6 +66,10 @@
       background-image: weather-image('WCtvwLHC9Ec');
     }
 
+    &.no-bg-image {
+      background-color: black;
+    }
+
 
   }
 
